src/components/ComponentCard.module.css
.component-card {
  --cardgroup-card-mobile-max-width: 300px;
}

.component-name {
  text-transform: lowercase;
}

.component-card__title {
  --utrecht-heading-3-margin-block-start: 0;
}

@media screen and (max-width: 768px) {
  .component-card {
    --component-illustration-svg-max-height: none;
    --cardgroup-card-max-width: 550px;
  }
}

